updates working