@@ -6,9 +6,9 @@ import java.util.stream.Collectors;
 
 public interface PathUtils {
 
-    String[] PING_URLS        = {"/ping", "/ping/", "/", "/csrf"};
+    String[] PING_URLS        = {"/ping", "/ping/", "/csrf"};
 
-    String[] PUBLIC_URLS      = {"/public/**"};
+    String[] PUBLIC_URLS      = {"/public/**","/public/today-news"};
 
     String[] SWAGGER_DOC_URLS = {"/v3/api-docs/**", "/swagger-ui/**"};
 
@@ -19,8 +19,10 @@ public interface PathUtils {
             return false;
         }
         
-        return List.of(AUTH_URLS, PUBLIC_URLS, PING_URLS, SWAGGER_DOC_URLS).stream().flatMap(Arrays::stream)
-                .collect(Collectors.toList()).stream().filter( url -> fullUrl.contains(url)).count() > 0;
+        List<String> pubUrls =  List.of(AUTH_URLS, PUBLIC_URLS, PING_URLS, SWAGGER_DOC_URLS).stream().flatMap(Arrays::stream)
+                .collect(Collectors.toList()).stream().filter( url -> fullUrl.contains(url)).toList();
+//        System.out.println("fullUrl: "+fullUrl+", pubUrls: "+pubUrls);
+        return pubUrls.size() > 0;
     }
 
 }
